fix module spacing around elements

--- a/gahtc/website/static/website/css/main.css
+++ b/gahtc/website/static/website/css/main.css
@@ -106,6 +106,7 @@ body {
 
 
 
+
 /* bootstrap override on link highlighting */
 
 
@@ -115,6 +116,7 @@ p {
     text-align: justify;
     font-family: 'LinuxLibertine';
 }
+
 
 
 
@@ -456,6 +458,7 @@ body nav {
 
 
 
+
 /** Browse by Modules Styles **/
 
 .featured-modules-title {
@@ -528,6 +531,7 @@ body nav {
 
 .all-modules .panel {
     background: #FAFAFA;
+    margin-bottom: 40px;
 }
 
 .module-heading {
@@ -562,11 +566,10 @@ body nav {
 }
 
 .module-photo-container {
-    width: 380px;
-    height: 240px;
+    width: 480px;
+    height: 300px;
     background-size: cover !important;
 }
-
 
 .module-contents .module-text {
     flex-basis: 65%;
@@ -577,8 +580,8 @@ body nav {
     font-size: 20px;
     text-overflow: ellipsis;
     position: relative;
-    line-height: 1.3em;
-    max-height: 6.5em;
+    line-height: 1.6em;
+    max-height: 9.6em;
     text-align: justify;
     margin-right: -1em;
     padding-right: 1em;
@@ -850,6 +853,7 @@ blockquote p {
 
 
 
+
 /* Background Image */
 
 #background,
@@ -951,6 +955,7 @@ blockquote p {
 
 
 
+
 /* Navbar */
 
 @media (min-width: 1200px) {
@@ -958,6 +963,7 @@ blockquote p {
         margin-top: -50px;
     }
 }
+
 
 
 
@@ -1121,6 +1127,7 @@ blockquote p {
 
 
 
+
 /* button group */
 
 .lowerLeft {
@@ -1201,6 +1208,7 @@ blockquote p {
 
 
 
+
 /* Search Bar */
 
 .searchbar {
@@ -1214,6 +1222,7 @@ blockquote p {
 .greybackground {
     background-color: rgba(204, 204, 204, 0.5);
 }
+
 
 
 
@@ -1480,11 +1489,13 @@ blockquote p {
 
 
 
+
 /* Add bottom padding to all containers */
 
 .container {
     padding-bottom: 30px;
 }
+
 
 
 
@@ -1622,6 +1633,7 @@ blockquote p {
 
 
 
+
 /* Feedback Form */
 
 .feedback {
@@ -1651,6 +1663,7 @@ blockquote p {
     text-decoration: none;
     background-color: #d9534f;
 }
+
 
 
 
